--- a/package.json
+++ b/package.json
@@ -2,20 +2,29 @@
   "name": "diary_app",
   "version": "1.0.0",
   "description": "diary app",
-  "main": "index.js",
   "scripts": {
-    "dev:server": "ts-node server/index.ts"
+    "dev:server": "ts-node server/index.ts",
+    "dev:frontend": "webpack-dev-server --mode development --output '[name].js'"
   },
   "author": "ushinji",
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/node": "^12.7.2",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.8.5",
+    "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "dependencies": {
     "ejs": "^2.6.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   }
 }
