--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "esModuleInterop": true,
         "outDir": "./dist",
         "strict": true,
+        "jsx": "react",
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noImplicitReturns": true
