--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,15 @@
         "sourceMap": true,
         "target": "es2018",
         "module": "commonjs",
+        "jsx": "react",
         "moduleResolution": "node",
         "esModuleInterop": true,
-        "outDir": "./dist",
         "strict": true,
-        "jsx": "react",
+        "outDir": "dist",
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noImplicitReturns": true
-    }
+        "noImplicitReturns": true,
+        "lib": ["es2017", "dom"],
+        "baseUrl": "./",
+    },
 }
