--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-promise-router": "^3.0.3",
     "pino": "^5.13.2",
     "pino-http": "^4.2.0",
     "pino-pretty": "^3.2.1",
