--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:frontend": "webpack-dev-server --mode development --output '[name].js'"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
@@ -19,6 +20,7 @@
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.0",
     "@types/node": "^12.7.2",
     "@types/pino": "^5.8.9",
