--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pino-http": "^4.2.0",
     "pino-pretty": "^3.2.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -27,6 +28,7 @@
     "@types/pino-http": "^4.0.3",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.8.5",
+    "@types/react-router-dom": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
     "eslint": "^6.1.0",
