--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "dev:frontend": "webpack-dev-server --mode development --output '[name].js'"
   },
   "dependencies": {
+    "apollo-server-express": "^2.8.2",
     "axios": "^0.19.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
+    "graphql": "^14.4.2",
     "pino": "^5.13.2",
     "pino-http": "^4.2.0",
     "pino-pretty": "^3.2.1",
