--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev:frontend": "webpack-dev-server --mode development --output '[name].js'"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.0.1",
+    "apollo-boost": "^0.4.4",
     "apollo-server-express": "^2.8.2",
     "axios": "^0.19.0",
     "ejs": "^2.6.2",
