--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-promise-router": "^3.0.3",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
+    "moment": "^2.24.0",
     "pino": "^5.13.2",
     "pino-http": "^4.2.0",
     "pino-pretty": "^3.2.1",
