--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql-tag": "^2.10.1",
     "history": "^4.9.0",
     "moment": "^2.24.0",
+    "path": "^0.12.7",
     "pino": "^5.13.2",
     "pino-http": "^4.2.0",
     "pino-pretty": "^3.2.1",
